# pyapple-mcp

./: .gitignore  PYPI_TRUSTED_PUBLISHING.md  PYPI_UPLOAD.md  README.md  api-styles.css  api.html  index.html  pyproject.toml  requirements.txt  setup.py  styles.css
.github/workflows/: publish.yml  test.yml
pyapple_mcp/: __init__.py  server.py  setup_helper.py
pyapple_mcp/utils/: __init__.py  applescript.py  calendar.py  contacts.py  mail.py  maps.py  messages.py  notes.py  reminders.py  websearch.py
scripts/: install.sh  test_installation.py
tests/: __init__.py  test_server.py
