[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyapple-mcp"
version = "1.0.0"
description = "Python implementation of Apple MCP tools for macOS"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Apple MCP Python", email = "pyapple-mcp@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
]
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-AddressBook>=10.0",
    "pyobjc-framework-EventKit>=10.0",
    "pyobjc-framework-ScriptingBridge>=10.0",
    "pyobjc-framework-MapKit>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/pyapple-mcp/pyapple-mcp"
Repository = "https://github.com/pyapple-mcp/pyapple-mcp"
Issues = "https://github.com/pyapple-mcp/pyapple-mcp/issues"

[project.scripts]
pyapple-mcp = "pyapple_mcp.server:main"
pyapple-mcp-setup = "pyapple_mcp.setup_helper:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
